Add filter() method for clear

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
       <!-- Add Tasks  -->
       <ul class="tasks"></ul>
-      <button type="button" id="clearAll" onclick="clearAll()">Clear All completed</button>
+      <button type="button" id="clearAll">Clear All completed</button>
     </div>
   </body>
 </html>
